# vk_bots

./: LICENSE  app.py  helpers.py  pyproject.toml  settings.py
.docs/: general.md
conf/: commands.ini  keyboards.ini  settings.ini  state.ini
test/: app_test.py  settings_test.py
