[tool.poetry]
name = "fsm_python"
version = "0.1.0"
description = ""
authors = ["netro <hewi@git.com>"]

[tool.poetry.dependencies]
python = "^3.10"
vkbottle = "^4.3.11"
pika = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
